# soft-skills

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  conftest.py  frontend-architecture-assessment.md  frontend-gap-analysis.md  hivemind-notes.md  nginx.conf  pytest.ini  sitecustomize.py  start.sh
backend/: Makefile  alembic.ini  debug_smoke.py  docker-compose.observability.yml  grafana-datasources.yaml  prometheus.yml  pyproject.toml  sitecustomize.py  softskills.db  tempo.yaml  test_debug.py
backend/alembic/: env.py
backend/alembic/versions/: 20260325_0001_foundation.py  20260325_0002_identity_content.py  20260325_0003_quick_practice_slice.py  20260325_0004_progression_recommendation_v1.py  20260326_0005_creator_workflows_discovery_v1.py  20260326_0006_admin_verification_audit.py  20260326_0007_admin_learner_relationships.py  20260326_0008_practice_runs.py  20260326_0009_evaluation_framework.py  20260326_0010_assistant_runtime.py  20260326_0010_org_enforcement.py  20260326_0011_assistant_stream_events.py  20260326_0012_org_enforcement.py  20260326_0013_events_org_scoping.py  20260327_0014_marking_overhaul_tables.py  20260327_0015_circuit_breaker_record.py  20260327_0016_pipeline_visualization.py  20260328_0017_prompt_library.py  20260328_0018_user_management.py  20260329_0019_org_scoped_prompts_skills.py  20260329_0020_assistant_human_approval.py  20260329_0021_admin_super_agent.py  20260330_0001_provider_call_cost.py  20260330_0022_assistant_read_sql_surface.py  20260330_0023_identity_password_auth.py  20260330_0024_backfill_local_passwords.py  20260330_0025_assistant_collection_visibility_surface.py  20260330_0026_assistant_taxonomy_read_surface.py  20260330_0027_sprint15_phase1.py  20260330_0028_sprint15_phase2.py  (+13 more)
backend/scripts/: run_practice.sh  seed_canonical.py  smoke_fresh.sh  test_all_routes.sh
backend/tests/: conftest.py
(+950 files in other folders)
