[project]
name = "soft-skills-backend"
version = "0.1.0"
description = "SoftSkills backend service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "stageflow-core>=0.1.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "structlog>=24.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "httpx>=0.26.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-exporter-otlp>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "opentelemetry-instrumentation-httpx>=0.43b0",
]

[project.scripts]
soft-skills-provider-smoke = "soft_skills_backend.smoke.__main__:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.1.13",
    "mypy>=1.8.0",
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/soft_skills_backend"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
disable_error_code = ["arg-type", "assignment", "union-attr", "operator", "index", "call-overload", "misc", "list-item", "return-value", "no-any-return", "redundant-cast", "attr-defined", "no-untyped-def", "override", "name-defined"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--import-mode=importlib"
